--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <script type="module">
     import { reactive, effect } from './reactive.js';
-    const obj = reactive({
+    const obj1 = reactive({
+        a: 0
+    });
+    const obj2 = reactive({
         a: 0
     });
 
     effect(() => {
-        console.log(obj.a);
+        console.log('efect1',obj1.a);
     });
+    effect(() => {
+        console.log('efect2',obj2.a);
+    });
+
     obj.a = 1;
     obj.a = 2;
 </script>
