--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <script type="module">
     import { reactive, effect } from './reactive.js';
     const obj1 = reactive({
-        a: 0
+        a: 0,
+        b: 1
     });
     const obj2 = reactive({
         a: 0
@@ -9,6 +10,9 @@
 
     effect(() => {
         console.log('efect1',obj1.a);
+    });
+    effect(() => {
+        console.log('efect3',obj1.b);
     });
     effect(() => {
         console.log('efect2',obj2.a);
