--- a/index.html
+++ b/index.html
@@ -1,24 +1,15 @@
 <script type="module">
-    import { reactive, effect } from './reactive.js';
+    import { reactive, effect, computed } from './reactive.js';
     const obj1 = reactive({
-        a: 0,
-        b: 1
-    });
-    const obj2 = reactive({
         a: 0
     });
 
-    effect(() => {
-        console.log('efect1',obj1.a);
-    });
-    effect(() => {
-        console.log('efect3',obj1.b);
-    });
-    effect(() => {
-        console.log('efect2',obj2.a);
+    const computedValue = computed(() => {
+        return obj1.a + 10;
     });
 
     obj1.a = 1;
-    obj1.b = 3;
-    obj2.a = 2;
+    console.log(computedValue.value);
+    obj1.a = 2;
+    console.log(computedValue.value);
 </script>
