jacascriptファイルの移動

--- a/vue_practice/samle/tab/index.html
+++ b/vue_practice/samle/tab/index.html
@@ -28,25 +28,6 @@
             </div>
         </section>
     </div>
-    <script>
-        let app = new Vue({
-            el:'#app',
-            data(){
-                return {
-                    active: 1,
-                    items: [
-                        {id:1,title:'サイトの情報'},
-                        {id:2,title:'商品情報'},
-                        {id:3,title:'お問い合わせ'},
-                    ]
-                }
-            },
-            methods:{
-                activate(id) {
-                    this.active = id;
-                }
-            }
-        })
-    </script>
+  <script src="./Vue.js"></script>
 </body>
 </html>
